--- a/debian/install
+++ b/debian/install
@@ -1,2 +1,2 @@
-pop-basic/ usr/share/plymouth/themes/
-usr/share/initramfs-tools/hooks/plymouth-pop
+pop-catppuccin-mocha/ usr/share/plymouth/themes/
+usr/share/initramfs-tools/hooks/plymouth-pop-catppuccin
